Fixed issue with post view on mobile devices

--- a/src/components/blog/blog-content-navigation.css
+++ b/src/components/blog/blog-content-navigation.css
@@ -17,7 +17,6 @@ body.dark {
 .blog-content-nav-wrapper h2 {
     margin-bottom: 0.3rem;
     margin-left: -1.5rem;
-    margin-top: 2.5rem;
 }
 
 .blog-content-nav-wrapper ul.blog-content-nav {
